styling horizontal scrolling + fixing responsive issues

--- a/resume-ui/skills&experience/style.css
+++ b/resume-ui/skills&experience/style.css
@@ -19,7 +19,7 @@
   --fs-400: 1.125rem;
   --fs-500: 1.375rem;
   --fs-600: 1.75rem;
-  --fs-700: 3.25rem;
+  --fs-700: clamp(2rem, 10vw - 0.5rem, 3.25rem);
 }
 
 *,
@@ -58,9 +58,13 @@ body {
 }
 
 .main-grid {
+  --_aside-width: clamp(7.5rem, 20vw, 15rem);
+  --_main-width: 1fr;
+  --_gap-size: 10vw;
+
   display: grid;
-  grid-template-columns: 15rem 1fr;
-  gap: clamp(3rem, 5vw, 10rem);
+  grid-template-columns: var(--_aside-width) var(--_main-width);
+  gap: var(--_gap-size);
   grid-auto-flow: dense;
   align-items: center;
   min-height: 100vh;
@@ -68,12 +72,16 @@ body {
 }
 
 main {
+  padding-block: 2rem;
   grid-column: 2;
+  width: calc(100vw - var(--_gap-size) - var(--_aside-width));
 }
 
 aside {
   grid-column: 1;
   align-self: stretch;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .eyebrow {
@@ -89,16 +97,44 @@ aside {
   font-size: var(--fs-700);
   text-transform: uppercase;
   margin: 0;
+  line-height: 1;
 }
 
 .intro {
   font-size: var(--fs-500);
+  max-width: 45ch;
 }
 
 .job-experience {
   display: grid;
+  justify-content: start;
   grid-auto-flow: column;
   gap: 1rem;
+  overflow-x: auto;
+  position: relative;
+  padding-block: 2rem;
+  /* pour firefox */
+  scrollbar-color: var(--clr-accent-400) var(--clr-primary-800);
+}
+
+.job-experience::-webkit-scrollbar {
+  height: 0.75rem;
+}
+
+.job-experience::-webkit-scrollbar-track {
+  background-color: var(--clr-primary-800);
+  border-radius: 100vw;
+}
+
+.job-experience::-webkit-scrollbar-thumb {
+  background-color: var(--clr-accent-400);
+  border-radius: 100vw;
+}
+
+.job-experience::after {
+  content: "";
+  width: 200px;
+  background-color: transparent;
 }
 
 .job {
@@ -110,6 +146,15 @@ aside {
 
 .job * {
   margin: 0;
+}
+
+.job:first-child::before {
+  content: "Current role";
+  position: absolute;
+  color: var(--clr-accent-400);
+  top: 0;
+  left: 0;
+  font-weight: var(--fw-semi-bold);
 }
 
 .job-info {
@@ -137,7 +182,7 @@ aside {
   border-left: 1px solid var(--clr-primary-300);
   padding: 0;
   margin: 0;
-  margin-left: clamp(5rem, 10vw, 10rem);
+  /* margin-left: clamp(5rem, 10vw, 10rem); */
   list-style: none;
   display: grid;
   align-content: center;
@@ -155,9 +200,9 @@ aside {
   content: "";
   position: absolute;
   top: 0;
-  left: calc(var(--_size) / -2);
-  /* left: 0;
-  transform: translateX(-50%); */
+  /* left: calc(var(--_size) / -2); */
+  left: 0;
+  transform: translateX(-50%);
   width: var(--_size);
   aspect-ratio: 1;
   outline: 0.5rem solid var(--clr-primary-400);
